--- a/css/hero.css
+++ b/css/hero.css
@@ -5,13 +5,17 @@ body{
 header{
     background-color: #1c4478;
     text-align; center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 header h1{
     color: white;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 header img{
-    border-radius: 150px;
+    border-radius: 170px;
     width: 300px;
+    border: 20px solid white;
 }
