--- a/css/hero.css
+++ b/css/hero.css
@@ -1,21 +1,79 @@
 body{
     margin: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
 }
 
 header{
     background-color: #1c4478;
-    text-align; center;
+    text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 
+h1, h2{
+        font-family: "Signika Negative", serif;
+}
+
 header h1{
     color: white;
-    font-family: Helvetica, Arial, sans-serif;
+    font-size: 50px;
 }
 
 header img{
     border-radius: 170px;
     width: 300px;
     border: 20px solid white;
+}
+
+main{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+main img{
+    max-width: 100%;
+}
+
+h2{
+    font-size: 30px;
+    color: #1c4478;
+    margin: 40px 0 10px;
+}
+
+a{
+    color: #1c4478;
+}
+
+a:hover{
+    color: white;
+    background-color: #483a94;
+}
+
+footer{
+    background-color: #1c4478;
+    text-align: center;
+    color: white;
+    padding: 50px;
+}
+
+footer p{
+    margin: 0;
+}
+
+footer a{
+    color: white;
+}
+
+footer a:hover{
+    opacity: .5;
+    background-color: transparent;
+}
+
+p.caption{
+    color: #999999;
+    font-style: italic;
+    margin-top: 0;
 }
