--- a/css/hero.css
+++ b/css/hero.css
@@ -16,6 +16,8 @@ h1, h2{
         font-family: "Signika Negative", serif;
 }
 
+/* header styles */
+
 header h1{
     color: white;
     font-size: 50px;
